# backend

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
.cursor/rules/: api.mdc  code.mdc  django.mdc
bookings/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
bookings/migrations/: 0001_initial.py
classes/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
classes/migrations/: 0001_initial.py  0002_create_sample_classes.py
core/: decorators.py  exceptions.py  settings.py  urls.py  utils.py  views.py
docs/: decorators_guide.md  requirements.md
postman_collection/: users_api.postman_collection.json
users/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py  0002_user_bio_user_company_name_user_is_verified_and_more.py  0003_remove_user_license_number_remove_user_website_and_more.py
